--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@iconify/iconify": "^2.2.1",
     "@types/nprogress": "^0.2.0",
     "axios": "^0.27.2",
+    "echarts": "^5.3.3",
     "element-plus": "^2.2.5",
     "eslint": "^8.17.0",
     "eslint-config-prettier": "^8.5.0",
