--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "unplugin-auto-import": "^0.8.8",
     "unplugin-vue-components": "^0.19.6",
     "vite": "^2.9.9",
+    "vite-plugin-compression": "^0.5.1",
     "vite-plugin-purge-icons": "^0.8.1",
     "vue-tsc": "^0.34.7"
   }
