--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "nprogress": "^0.2.0",
     "pinia": "^2.0.14",
     "prettier": "^2.6.2",
+    "super-tools-lib": "^1.35.0",
     "vue": "^3.2.25",
     "vue-router": "^4.0.15"
   },
