--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "axios": "^0.27.2",
     "echarts": "^5.3.3",
     "element-plus": "^2.2.5",
+    "@wangeditor/editor": "^5.1.14",
+    "@wangeditor/editor-for-vue": "^5.1.12",
     "eslint": "^8.17.0",
     "eslint-config-prettier": "^8.5.0",
     "mitt": "^3.0.0",
