--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "mitt": "^3.0.0",
     "nprogress": "^0.2.0",
     "pinia": "^2.0.14",
+    "naive-ui": "^2.30.2",
     "prettier": "^2.6.2",
     "super-tools-lib": "^1.35.0",
     "vue": "^3.2.25",
