feat:iteration version

--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@wangeditor/editor-for-vue": "^5.1.12",
     "eslint": "^8.17.0",
     "eslint-config-prettier": "^8.5.0",
+    "codemirror-editor-vue3": "^2.1.7",
     "mitt": "^3.0.0",
     "nprogress": "^0.2.0",
     "pinia": "^2.0.14",
