--- a/package.json
+++ b/package.json
@@ -13,18 +13,19 @@
     "@element-plus/icons-vue": "^2.0.4",
     "@iconify/iconify": "^2.2.1",
     "@types/nprogress": "^0.2.0",
-    "axios": "^0.27.2",
-    "echarts": "^5.3.3",
-    "element-plus": "^2.2.5",
+    "@vicons/ionicons5": "^0.12.0",
     "@wangeditor/editor": "^5.1.14",
     "@wangeditor/editor-for-vue": "^5.1.12",
+    "axios": "^0.27.2",
+    "codemirror-editor-vue3": "^2.1.7",
+    "echarts": "^5.3.3",
+    "element-plus": "^2.2.5",
     "eslint": "^8.17.0",
     "eslint-config-prettier": "^8.5.0",
-    "codemirror-editor-vue3": "^2.1.7",
     "mitt": "^3.0.0",
+    "naive-ui": "^2.30.2",
     "nprogress": "^0.2.0",
     "pinia": "^2.0.14",
-    "naive-ui": "^2.30.2",
     "prettier": "^2.6.2",
     "super-tools-lib": "^1.35.0",
     "vue": "^3.2.25",
