--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "naive-ui": "^2.30.2",
     "nprogress": "^0.2.0",
     "pinia": "^2.0.14",
+    "pinia-plugin-persistedstate": "^2.4.0",
     "prettier": "^2.6.2",
     "super-tools-lib": "^1.35.0",
     "vue": "^3.2.25",
