--- a/package.json
+++ b/package.json
@@ -36,8 +36,11 @@
     "@iconify/json": "^2.1.63",
     "@types/node": "^17.0.40",
     "@vitejs/plugin-vue": "^2.3.3",
+    "autoprefixer": "^10.4.13",
     "less": "^4.1.2",
     "less-loader": "^11.0.0",
+    "postcss": "^8.4.21",
+    "tailwindcss": "^3.2.4",
     "typescript": "^4.5.4",
     "unplugin-auto-import": "^0.8.8",
     "unplugin-vue-components": "^0.19.6",
