--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@iconify/iconify": "^2.2.1",
     "@types/nprogress": "^0.2.0",
     "@vicons/ionicons5": "^0.12.0",
+    "@vueuse/core": "^9.12.0",
     "@wangeditor/editor": "^5.1.14",
     "@wangeditor/editor-for-vue": "^5.1.12",
     "axios": "^0.27.2",
