--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@types/node": "^17.0.40",
     "@vitejs/plugin-vue": "^2.3.3",
     "less": "^4.1.2",
+    "tailwindcss": "^3.2.4",
     "less-loader": "^11.0.0",
     "typescript": "^4.5.4",
     "unplugin-auto-import": "^0.8.8",
