--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "prettier": "^2.6.2",
     "super-tools-lib": "^1.35.0",
     "vue": "^3.2.25",
+    "vue-i18n": "^9.3.0-beta.16",
     "vue-router": "^4.0.15"
   },
   "devDependencies": {
@@ -38,8 +39,8 @@
     "@types/node": "^17.0.40",
     "@vitejs/plugin-vue": "^2.3.3",
     "less": "^4.1.2",
-    "tailwindcss": "^3.2.4",
     "less-loader": "^11.0.0",
+    "tailwindcss": "^3.2.4",
     "typescript": "^4.5.4",
     "unplugin-auto-import": "^0.8.8",
     "unplugin-vue-components": "^0.19.6",
