--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "pinia": "^2.0.14",
     "pinia-plugin-persistedstate": "^2.4.0",
     "prettier": "^2.6.2",
+    "qweather-icons": "^1.3.1",
     "super-tools-lib": "^1.35.0",
     "vue": "^3.2.25",
     "vue-i18n": "^9.3.0-beta.16",
