refactor:重构代码和类型系统

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -30,7 +30,7 @@
     "src/**/*.d.ts",
     "src/**/*.tsx",
     "src/**/*.vue",
-    "src/service/api/index.js"
+    "src/service/api/index.ts"
   ],
   "references": [
     {
