--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "element-plus": "^2.2.5",
     "eslint": "^8.17.0",
     "eslint-config-prettier": "^8.5.0",
+    "lodash": "^4.17.21",
     "mitt": "^3.0.0",
     "naive-ui": "^2.30.2",
     "nprogress": "^0.2.0",
