--- a/package.json
+++ b/package.json
@@ -25,12 +25,12 @@
     "eslint-config-prettier": "^8.5.0",
     "lodash": "^4.17.21",
     "mitt": "^3.0.0",
+    "moment": "^2.29.4",
     "naive-ui": "^2.30.2",
     "nprogress": "^0.2.0",
     "pinia": "^2.0.14",
     "pinia-plugin-persistedstate": "^2.4.0",
     "prettier": "^2.6.2",
-    "super-tools-lib": "^1.35.0",
     "vue": "^3.2.25",
     "vue-i18n": "^9.3.0-beta.16",
     "vue-router": "^4.0.15"
