--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "eslint": "^8.17.0",
     "eslint-config-prettier": "^8.5.0",
     "mitt": "^3.0.0",
+    "moment": "^2.29.4",
     "naive-ui": "^2.30.2",
     "nprogress": "^0.2.0",
     "pinia": "^2.0.14",
