--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "element-plus": "^2.7.2",
     "eslint": "^8.17.0",
     "eslint-config-prettier": "^8.5.0",
+    "iconify-icon": "^2.1.0",
     "lodash": "^4.17.21",
     "mitt": "^3.0.0",
     "moment": "^2.29.4",
